--- a/resume/areainterest.tex
+++ b/resume/areainterest.tex
@@ -1,4 +1,3 @@
 \cvsection{Areas of Interest}
-\small{Deep Learning/Neural Networks, Artificial Intelligence, Optimization/Heuristics,
-Mathematical Modelling, Agent-based Simulation, Network Analysis, Functional
+\small{Deep Learning/J2EE, Microservices, Cloud Computing Functional
 Programming, Distributed Systems}
