--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,34 +1,24 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {B.Sc in Mathematics}
-    {Universidad de los Andes (Facultad de Ciencias)}
-    {Bogotá, Colombia}
-    {Aug. 2013}
+    {B.Sc in Computer Siience}
+    {Nagarjuna University}
+    {Guntur, India}
+    {Mar 2001}
     {
       \begin{cvitems}
-        \item {Relevant courses: Advanced Mathematical Physics, Quantum Computing, Combinatorics, Abstract Algebra, Differential Equations}
+        \item {Relevant courses:Computer Secience,Mathematics, Physics}
       \end{cvitems}
     }
     \cventry
-    {B.Sc. in Physics}
-    {Universidad de los Andes (Facultad de Ciencias)}
-    {Bogotá, Colombia}
-    {Aug. 2013}
+    {MCA }
+    {Andhra University}
+    {Viskapatnam, India}
+    {Mar. 2004}
     {
         \begin{cvitems}
-            \item {Relevant courses: Computational Science, Electromagnetism and Waves, Quantum Mechanics, Mathematical Methods of Physics}
+            \item {Relevant courses: Computer Science, Mathematics}
         \end{cvitems}
     }
-    \cventry
-    {Minor in Education}
-    {Universidad de los Andes (Facultad de Educación)}
-    {Bogotá, Colombia}
-    {Aug. 2013}
-    {
-        \begin{cvitems}
-            \item{ Relevant courses: Learning Environments, Science and Education, Constructivism Psychology}
-            \item{ Additional courses in: Leadership practice and theory }
-        \end{cvitems}
-    }
+    
 \end{cventries}
